# fmc_backend

./: .dockerignore  .gitignore  Dockerfile  README.md  celerybeat-schedule.db  clear_db.sh  docker-compose-prod.yml  docker-compose.yaml  prepare_db.sh  pyproject.toml  sample.env  start_server.sh  start_worker.sh  tox.ini
.github/workflows/: python-app.yml
app/: config.py  database.py  logger.py  main.py  oauth2.py  utils.py
app/admin/: __init__.py  coach.py  student.py
app/controller/: __init__.py  aws_boto.py  mail_client.py  newsletter.py
app/dependency/: __init__.py  lesson.py  user.py
app/model/: __init__.py  coach.py  coach_certificate.py  coach_location.py  coach_schedule.py  coach_sport.py  coach_subscription.py  contact.py  lesson.py  lesson_review.py  location.py  message.py  newsletter_subscription.py  sport_type.py  stripe_product.py  student.py  student_favourite_coach.py  student_lesson.py  student_lesson_payment.py  superuser.py  user.py
app/router/: __init__.py  auth.py  coach_auth.py  contact.py  keys.py  lesson.py  like.py  message.py  newsletter.py  notifications.py  package.py  profile.py  review.py  schedule.py  search.py  sport.py  stripe.py  student_auth.py  subscription.py  user.py  whoami.py
app/schema/: __init__.py  api_keys.py  booking.py  certificate.py  contact.py  lesson.py  (+13 more)
migrations/: env.py
pg-backup/: ReadMe.md
tasks/: __init__.py  create_dummy_data.py  message.py  newsletter.py  real_data.py  shell_init.py  sports.py  stripe.py  superuser.py  test_task.py
tests/: conftest.py  test.env  test_data.json  utils.py
(+86 files in other folders)
